<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="billAmount">Bill Amount</string>
    <string name="percent">Percent</string>
    <string name="negative">-</string>
    <string name="positive">+</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="initialPercent">15%</string>
    <string name="initialTip">$0.00</string>
    <string name="initialTotal">$0.00</string>
</resources>